fix typo in validation yml file

--- a/.github/workflows/terraform_validate.yml
+++ b/.github/workflows/terraform_validate.yml
@@ -7,6 +7,6 @@ on:
       - '**.tfvars'
  
 jobs:
-  terraform-docs:
+  terraform-validate:
     uses: fulyagonultas/terraform-workflows/.github/workflows/terraform_validate.yml@main
     secrets: inherit
